--- a/KrpanoOnlineViewer/wwwroot/index.html
+++ b/KrpanoOnlineViewer/wwwroot/index.html
@@ -22,7 +22,7 @@
             max-width: 1600px;
             margin: 0 auto;
             background: white;
-            border-radius: 15px;
+            border-radius: 12px;
             box-shadow: 0 20px 40px rgba(0,0,0,0.1);
             overflow: hidden;
         }
@@ -200,6 +200,7 @@
         <header>
             <h1>全景图转换查看工具</h1>
             <p class="subtitle">上传全景图，自动转换为交互式全景漫游</p>
+            <button id="changePasswordBtn" style="position:absolute; top:28px; right:28px; padding:6px 12px; border:none; border-radius:12px; background:#2ecc71; color:white; cursor:pointer;">修改密码</button>
         </header>
 
         <div class="main-content">
@@ -235,6 +236,17 @@
                 </div>
             </div>
         </div>
+
+        <div id="passwordModal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.5); z-index:1000; align-items:center; justify-content:center;">
+            <div style="background:white; padding:30px; border-radius:12px; max-width:400px; width:90%; text-align:center;">
+                <h2>请输入访问密码</h2>
+                <input type="password" id="passwordInput" placeholder="密码" style="width:80%; padding:8px; margin:15px 0; border-radius:6px; border:1px solid #ccc; font-size:16px;">
+                <div>
+                    <button id="passwordSubmit" style="padding:8px 16px; border:none; border-radius:6px; background:#3498db; color:white; cursor:pointer;">确认</button>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <script>
@@ -257,6 +269,21 @@
         uploadArea.addEventListener('dragleave', handleDragLeave);
         uploadArea.addEventListener('drop', handleDrop);
         fileInput.addEventListener('change', handleFileSelect);
+
+
+        // --- Cookie 工具函数 ---
+        function setCookie(name, value, days) {
+            const expires = new Date(Date.now() + days*24*60*60*1000).toUTCString();
+            document.cookie = `${name}=${encodeURIComponent(value)}; expires=${expires}; path=/`;
+        }
+
+        function getCookie(name) {
+            const match = document.cookie.match(new RegExp('(^| )' + name + '=([^;]+)'));
+            return match ? decodeURIComponent(match[2]) : null;
+        }
+
+        // --- 密码处理 ---
+        let accessPassword = getCookie('accessPassword');
 
         // 加载全景图列表
         loadPanoramaList();
@@ -309,7 +336,7 @@
             try {
                 showProgress('正在上传', 0);
 
-                const response = await fetch('api/upload', {
+                const response = await fetchWithPassword('api/upload', {
                     method: 'POST',
                     body: formData
                 });
@@ -339,7 +366,7 @@
                 if (!currentProcessingId) return;
 
                 try {
-                    const response = await fetch(`api/status/${currentProcessingId}`);
+                    const response = await fetchWithPassword(`api/status/${currentProcessingId}`);
                     if (!response.ok) {
                         throw new Error('状态检查失败');
                     }
@@ -407,7 +434,13 @@
 
         async function loadPanoramaList() {
             try {
-                const response = await fetch('api/panoramas');
+                const response = await fetchWithPassword('api/panoramas');
+                
+                if (!response.ok) {
+                    const text = await response.text(); // 读取原始文本（可能不是 JSON）
+                    throw new Error(text || `HTTP 错误 ${response.status}`);
+                }
+
                 const panoramas = await response.json();
 
                 if (panoramas.length === 0) {
@@ -428,7 +461,8 @@
                 `).join('');
 
             } catch (error) {
-                panoramaList.innerHTML = '<div style="text-align: center; padding: 40px; color: #e74c3c;">加载失败</div>';
+                console.log(error)
+                panoramaList.innerHTML = `<div style="text-align: center; padding: 40px; color: #e74c3c;">加载失败：${error.message}</div>`;
                 console.error('加载全景图列表失败:', error);
             }
         }
@@ -449,6 +483,68 @@
                 .replace(/"/g, "&quot;")
                 .replace(/'/g, "&#039;");
         }
+
+        function showPasswordModal() {
+            document.getElementById('passwordModal').style.display = 'flex';
+            document.getElementById('passwordInput').value = accessPassword || '';
+            document.getElementById('passwordInput').focus();
+        }
+
+        document.getElementById('passwordSubmit').addEventListener('click', async () => {
+            const input = document.getElementById('passwordInput').value.trim();
+            if (!input) {
+                alert('请输入密码');
+                return;
+            }
+
+            try {
+                // 使用临时密码进行测试
+                const testResponse = await fetch('api/panoramas', {
+                    headers: {
+                        'X-Access-Token': input
+                    }
+                });
+
+                if (!testResponse.ok) {
+                    // 如果密码错误或未授权
+                    const text = await testResponse.text();
+                    alert('密码错误，请重新输入：' + text);
+                    return;
+                }
+
+                // 密码正确
+                accessPassword = input;
+                setCookie('accessPassword', accessPassword, 365); // 保存1年
+                document.getElementById('passwordModal').style.display = 'none';
+
+                // 重新加载全景图列表
+                loadPanoramaList();
+
+            } catch (error) {
+                alert('验证密码时出错：' + error.message);
+                console.error(error);
+            }
+        });
+
+
+        // 点击修改按钮弹出密码输入
+        document.getElementById('changePasswordBtn').addEventListener('click', showPasswordModal);
+
+        // 如果没有密码，启动时弹出
+        if(!accessPassword){
+            showPasswordModal();
+        }
+
+        // --- fetch 封装 ---
+        // 替换原来的 fetch 调用，加上 X-Access-Token
+        async function fetchWithPassword(url, options = {}) {
+            options.headers = options.headers || {};
+            if(accessPassword) {
+                options.headers['X-Access-Token'] = accessPassword;
+            }
+            return fetch(url, options);
+        }
+
     </script>
 </body>
 </html>
